RESOLVED FIXED59412
Custom prototypes on DOM objects don't persist after garbage collection
https://bugs.webkit.org/show_bug.cgi?id=59412
Summary Custom prototypes on DOM objects don't persist after garbage collection
Geoffrey Garen
Reported 2011-04-25 20:09:31 PDT
Custom prototypes on DOM objects don't persist after garbage collection
Attachments
Patch (15.21 KB, patch)
2011-04-25 20:26 PDT, Geoffrey Garen
no flags
Patch (6.91 KB, patch)
2011-04-25 20:27 PDT, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2011-04-25 20:26:30 PDT
Geoffrey Garen
Comment 2 2011-04-25 20:27:49 PDT
Geoffrey Garen
Comment 3 2011-04-25 23:23:20 PDT
Note You need to log in before you can comment on or make changes to this bug.